<resources>
    <string name="app_name">MobileCompareApp</string>
    <string name="navigation_drawer_open">open navigation drawer</string>
    <string name="navigation_drawer_close">close navigation drawer</string>


    <string name="title_explore">EXPLORE</string>
    <string name="title_feed">FEED</string>
    <string name="title_news">NEWS</string>
    <string name="title_qa">Q &amp;A</string>
    <string name="title_profile">ME</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Rs">\u20B9</string>

</resources>
