<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/explore"
        android:enabled="true"
        android:icon="@drawable/ic_phone_explore"
        android:title="@string/title_explore"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/feedback"
        android:enabled="true"
        android:icon="@drawable/ic_feedback"
        android:title="@string/title_feed"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/news_report"
        android:enabled="true"
        android:icon="@drawable/ic_newspaper_report"
        android:title="@string/title_news"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/question"
        android:enabled="true"
        android:icon="@drawable/ic_question_mark"
        android:title="@string/title_qa"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile"
        app:showAsAction="ifRoom" />

</menu>